--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
+    
+    - name: Build Docker Images
+      run: |
+        echo ${{ secrets.DOCKER_USERNAME }}
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
