--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
     
     - name: Build Docker Images
       run: |
-        echo ${{ secrets.DOCKER_USERNAME }}
+        echo ${{ secrets.DOCKER_USERNAME }} | base64
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
