--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Build Docker Images
       run: |
         echo ${{ secrets.DOCKER_USERNAME }} | base64
+        echo ${{ secrets.DOCKER_PASSWORD }} | base64
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
