--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,8 @@ version: '3'
 services:
   db:
     image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
-    ports:
-      - "27017:27017"
     volumes:
-      - ./db:/data/db
+      - mongodb_data:/data/db
 
   backend:
     build: .
@@ -27,4 +22,7 @@ services:
       MONGO_USERNAME: "root"
       MONGO_PASSWORD: "root"
       MONGO_HOST: "db"
-      MONGO_URI: "mongodb+srv://root:root@db/db"
+      MONGO_URI: "mongodb://db/db"
+
+volumes:
+  mongodb_data: {}
